정기배송배너까지 html

--- a/index.html
+++ b/index.html
@@ -76,35 +76,166 @@
             </nav>
             <!-- e:메뉴 -->
             <ul class="right_menu">
-                <li><a href="#"><img src="#" alt="장바구니"></a></li>
-                <li><a href="#"><img src="#" alt="찜 상품 보기"></a></li>
-                <li><a href="#"><img src="#" alt="내 정보 보기"></a></li>
+                <li><a href="#"><img src="./images/header001.png" alt="장바구니"></a></li>
+                <li><a href="#"><img src="./images/header002.png" alt="찜 상품 보기"></a></li>
+                <li><a href="#"><img src="./images/header003.png" alt="내 정보 보기"></a></li>
             </ul>
         </header>
         <main>
             <!-- 1.광고배너 -->
             <section class="ad_wrap">
                 <!-- 1-1. 광고 개별 그룹 -->
-                <div class="ad ad1">
-                    <div class="ad_txt">
-                        <hr class="ad_line">
-                        <h2>버터에 풍미를 더하다</h2>
-                        <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
-                        <!-- 왼, 오 버튼 -->
-                        <div class="ad_btn">
-                        <button type="button" class="ad_prev"><img src="#" alt="이전 광고 보기"></button>
-                        <span class="page_num">01 / 08</span>
-                        <button type="button" class="ad_next"><img src="#" alt="다음 광고 보기"></button>
+                <div class="swiper adSwiper">
+                        <div class="swiper-wrapper">
+                            <!-- 슬라이드 1 -->
+                            <div class="swiper-slide slide1">
+                                <div class="ad_txt">
+                                    <div class="ad_line"></div>
+                                    <h2>버터에 풍미를 더하다</h2>
+                                    <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
+                                    <!-- 왼, 오 버튼 -->
+                                    <div class="ad_btn">
+                                    <button type="button" class="ad_prev"><img src="./images/prev001.png" alt="이전 광고 보기"></button>
+                                    <span class="page_num">01 / 08</span>
+                                    <button type="button" class="ad_next"><img src="./images/next001.png" alt="다음 광고 보기"></button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+            </section>
+            <!-- 2.비전배너 -->
+            <section class="vision_wrap">
+                <img src="./images/yogurt.png" alt="">
+                <div class="vision_txt">
+                    <h2>룩트의 비전은 건강한 미식경험입니다.</h2>
+                    <p>먹는 것이 매순간 행복한 경험이 되는 제품을 만듭니다.<br>모든 사람이 쉽고 간편하게 건강한 미식을 경험하게 해드리겠습니다.</p>
+                    <span>Every Meal  Could Be a Heakthy Gourmet Experience</span>
                 </div>
             </section>
-            <!-- 2.중간배너1 -->
-            <section class="mid_wrap">
-                <img src="./images/yogurt.png" alt="">
-                <h2>룩트의 비전은 건강한 미식경험입니다.</h2>
-                <p>먹는 것이 매순간 행복한 경험이 되는 제품을 만듭니다.<br>모든 사람이 쉽고 간편하게 건강한 미식을 경험하게 해드리겠습니다.</p>
-                <span>Every Meal  Could Be a Heakthy Gourmet Experience</span>
+            <!-- 3.best -->
+            <section class="best_wrap">
+                <div class="best_header">
+                    <h2>BEST</h2>
+                    <a href="#"><span>더보기</span><img src="./images/next002.png" alt=""></a>
+                </div>
+                <ul class="best_list">
+                    <li class="product_card">
+                        <a href="#">
+                            <div class="product_img_wrap">
+                                <img src="./images/best001.jpg" alt="룩트 단백질쉐이크 파우치 45g 3개 한정 상품">
+                                <div class="best_icon">
+                                    <img src="./images/best_icon001.png" alt="찜하기">
+                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                </div>
+                            </div>
+                            <p class="product_name">룩트 단백질쉐이크 파우치 45g x 3개 (한정)</p>
+                            <p class="product_price">
+                                <span class="discount">23%</span>
+                                <span class="price">26,900원</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li class="product_card">
+                        <a href="#">
+                            <div class="product_img_wrap">
+                                <img src="./images/best002.jpg" alt="룩트 단백질쉐이크 파우치 45g 3개 한정 상품">
+                                <div class="best_icon">
+                                    <img src="./images/best_icon001.png" alt="찜하기">
+                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                </div>
+                            </div>
+                            <p class="product_name">룩트 단백질쉐이크 파우치 45g x 3개 (한정)</p>
+                            <p class="product_price">
+                                <span class="discount">23%</span>
+                                <span class="price">26,900원</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li class="product_card">
+                        <a href="#">
+                            <div class="product_img_wrap">
+                                <img src="./images/best003.jpg" alt="룩트 단백질쉐이크 파우치 45g 3개 한정 상품">
+                                <div class="best_icon">
+                                    <img src="./images/best_icon001.png" alt="찜하기">
+                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                </div>
+                            </div>
+                            <div class="product_name">룩트 단백질쉐이크 파우치 45g x 3개 (한정)</div>
+                            <div class="product_price">
+                                <span class="discount">23%</span>
+                                <span class="price">26,900원</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="product_card">
+                        <a href="#">
+                            <div class="product_img_wrap">
+                                <img src="./images/best004.jpg" alt="룩트 단백질쉐이크 파우치 45g 3개 한정 상품">
+                                <div class="best_icon">
+                                    <img src="./images/best_icon001.png" alt="찜하기">
+                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                </div>
+                            </div>
+                            <p class="product_name">룩트 단백질쉐이크 파우치 45g x 3개 (한정)</p>
+                            <p class="product_price">
+                                <span class="discount">23%</span>
+                                <span class="price">26,900원</span>
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <!-- 4.신제품광고배너 -->
+            <section class="newbnr">
+                <a href="#">
+                    <div class="newbnr_txt">
+                        <h2>단백질쉐이크</h2>
+                        <h3>출시기념 SALE ~28%</h3>
+                        <p>06/09 (월) - 06/18 (수)</p>
+                        <span>지금 클릭하면 무료배송까지!</span>
+                    </div>
+                </a>
+            </section>
+            <!-- 5.sale -->
+            <div class="sale_wrap">
+                <div class="sale_left">
+                    <h2>SALE</h2>
+                    <div class="sale_select">
+                        <a href="#">요거트&토핑</a>
+                        <a href="#" class="on">단백질쉐이크</a>
+                        <a href="#">버터</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 6-1. 선물 배너 -->
+            <section class="gift_wrap">
+                <a href="#" class="gift_bnr">
+                    <img src="./images/bnr003.jpg" alt="선물세트">
+                    <div class="promo_txt">
+                        <h2>소중한 순간을 위한 완벽한 선물</h2>
+                        <p>건강한 재료, 정직한 제조, 그리고 깊은 맛. 룩트 선물세트는 당신의 진심을 조용히, 그러나 분명하게 전합니다.</p>
+                        <div class="more_btn">
+                            <img src="./images/next002.png" alt="선물세트 자세히 보기">
+                        </div>
+                    </div>
+                </a>
+            </section>
+            <!-- 6-2. 정기배송 배너 -->
+            <section class="delivery_wrap">
+                <a href="#" class="delivery_bnr">
+                    <img src="./images/bnr004.jpg" alt="정기배송">
+                    <div class="promo_txt">
+                        <h2>필요할 때 딱! 자동으로 찾아가는 정기배송</h2>
+                        <p>원하는 주기, 원하는 제품으로 내 삶에 꼭 맞춘 요거트 루틴을 시작하세요.</p>
+                        <div class="more_btn">
+                            <img src="./images/next002.png" alt="선물세트 보기">
+                        </div>
+                    </div>
+                </a>
+            </section>
+            <!-- 7.비디오 카테고리 -->
+            <section class="video_wrap">
             </section>
         </main>
     </div>
