--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>룩트 요거트</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <link href="./styles/reset.css" rel="stylesheet">
+    <link href="./styles/index.css" rel="stylesheet">
 </head>
 <body>
     <!-- 룩트 메인페이지 시작 영역 -->
