--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                             </div>
                                         </div>
                                         <div class="sale_txt">
-                                            <p class="product_name">룩트 단백질쉐이크 파우치<br>45g x 3개 (한정)</p>
+                                            <p class="product_name">[3개 세트] 룩트 단백질쉐이크 파우치<br>45g x 3개 (한정)</p>
                                             <p class="product_price">
                                                 <span class="discount">23%</span>
                                                 <strong class="price">26,900원</strong>
@@ -587,11 +587,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -604,11 +604,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -621,11 +621,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -638,11 +638,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                         </div>
@@ -657,11 +657,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -672,11 +672,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -689,11 +689,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                             <div class="review_card">
@@ -706,11 +706,11 @@
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
-                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요. 강력 추천합니다!</p>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
                                 </div>
                             </div>
                         </div>
