--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <!-- 7.비디오 카테고리 -->
             <section class="video_wrap">
                 <div class="tab_layout">
-                    <!-- 왼쪽: 비디오 슬라이드 -->
+                    <!-- 왼쪽 -->
                     <div class="videoLeftSwiper swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide tab_video">
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- 오른쪽: 탭 콘텐츠 -->
+                    <!-- 오른쪽 -->
                     <div class="tap_right">
                         <div class="tab_contents">
                             <!-- 탭 메뉴 & 화살표 -->
