--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide slide2"><!-- 슬라이드2번째 -->
+                            <!-- 슬라이드 2 -->
+                            <div class="swiper-slide slide2">
+                                <div class="ad_txt">
+                                    <div class="ad_line"></div>
+                                    <div class="txt_area">
+                                        <h2>버터에 풍미를 더하다</h2>
+                                        <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 슬라이드 3 -->
+                            <div class="swiper-slide slide3">
                                 <div class="ad_txt">
                                     <div class="ad_line"></div>
                                     <div class="txt_area">
@@ -247,21 +258,75 @@
                         <ul class="swiper-wrapper">
                             <li class="swiper-slide sale_card">
                                 <a href="#">
-                                        <div class="sale_img_wrap">
-                                            <img src="./images/sale001.jpg" alt="단백질쉐이크 파우치 3개">
-                                            <div class="sale_icon">
-                                                <img src="./images/best_icon001.png" alt="찜하기">
-                                                <img src="./images/best_icon002.png" alt="장바구니담기">
-                                            </div>
+                                    <div class="sale_img_wrap">
+                                        <img src="./images/sale001.jpg" alt="단백질쉐이크 파우치 3개">
+                                        <div class="sale_icon">
+                                            <img src="./images/best_icon001.png" alt="찜하기">
+                                            <img src="./images/best_icon002.png" alt="장바구니담기">
                                         </div>
-                                        <div class="sale_txt">
-                                            <p class="product_name">[3개 세트] 룩트 단백질쉐이크 파우치<br>45g x 3개 (한정)</p>
-                                            <p class="product_price">
-                                                <span class="discount">23%</span>
-                                                <strong class="price">26,900원</strong>
-                                            </p>
+                                    </div>
+                                    <div class="sale_txt">
+                                        <p class="product_name">[3개 세트] 룩트 단백질쉐이크 파우치<br>45g x 3개 (한정)</p>
+                                        <p class="product_price">
+                                            <span class="discount">23%</span>
+                                            <strong class="price">26,900원</strong>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide sale_card">
+                                <a href="#">
+                                    <div class="sale_img_wrap">
+                                        <img src="./images/sale002.jpg" alt="단백질쉐이크 볶음콩소보로 7개입">
+                                        <div class="sale_icon">
+                                            <img src="./images/best_icon001.png" alt="찜하기">
+                                            <img src="./images/best_icon002.png" alt="장바구니담기">
                                         </div>
-                                    </a>
+                                    </div>
+                                    <div class="sale_txt">
+                                        <p class="product_name">룩트 단백질쉐이크 볶음콩소보로 파우치<br>45g × 7개입 (1세트)</p>
+                                        <p class="product_price">
+                                            <span class="discount">23%</span>
+                                            <strong class="price">26,900원</strong>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide sale_card">
+                                <a href="#">
+                                    <div class="sale_img_wrap">
+                                        <img src="./images/sale003.jpg" alt="단백질쉐이크 초코헤이즐넛 7개입">
+                                        <div class="sale_icon">
+                                            <img src="./images/best_icon001.png" alt="찜하기">
+                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                        </div>
+                                    </div>
+                                    <div class="sale_txt">
+                                        <p class="product_name">룩트 단백질쉐이크 초코헤이즐넛 파우치<br>45g × 7개입 (1세트)</p>
+                                        <p class="product_price">
+                                            <span class="discount">23%</span>
+                                            <strong class="price">26,900원</strong>
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="swiper-slide sale_card">
+                                <a href="#">
+                                    <div class="sale_img_wrap">
+                                        <img src="./images/sale001.jpg" alt="단백질쉐이크 파우치 3개">
+                                        <div class="sale_icon">
+                                            <img src="./images/best_icon001.png" alt="찜하기">
+                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                        </div>
+                                    </div>
+                                    <div class="sale_txt">
+                                        <p class="product_name">[3개 세트] 룩트 단백질쉐이크 파우치<br>45g x 3개 (한정)</p>
+                                        <p class="product_price">
+                                            <span class="discount">23%</span>
+                                            <strong class="price">26,900원</strong>
+                                        </p>
+                                    </div>
+                                </a>
                             </li>
                             <li class="swiper-slide sale_card">
                                 <a href="#">
@@ -302,7 +367,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section>            
             <!-- 6 오퍼 배너 -->
             <section class="service_wrap">
                 <!-- 6-1. 오퍼 배너1 -->
@@ -665,10 +730,152 @@
                                 </div>
                             </div>
                             <div class="review_card">
-                                <img src="./images/rv002.jpg" alt="단백질쉐이크 파우치 3개">
-                                <div class="review_txt">
-                                    <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
-                                    <strong class="price">26,900원</strong>
+                                <div class="review_product">
+                                    <img src="./images/rv002.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv003.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv004.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv001.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv002.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv003.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv004.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv001.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                                <div class="review_box">
+                                    <div class="star">★★★★★</div>
+                                    <p>건강한 재료에 맛까지 좋아서 자꾸 손이 가요. 부모님께 건강 간식으로도 보내드렸어요.<br>강력 추천합니다!</p>
+                                </div>
+                            </div>
+                            <div class="review_card">
+                                <div class="review_product">
+                                    <img src="./images/rv002.jpg" alt="단백질쉐이크 파우치 3개">
+                                    <div class="review_txt">
+                                        <h3>룩트 단백질쉐이크 파우치 45g x 3개 (한정)</h3>
+                                        <strong class="price">26,900원</strong>
+                                    </div>
                                 </div>
                                 <div class="review_box">
                                     <div class="star">★★★★★</div>
@@ -717,7 +924,7 @@
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
-            </section>            
+            </section>
             <!-- 10. 카페 홍보 배너 -->
             <section class="cafe_wrap">
                 <a href="#">
