--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
             <!-- 1.광고배너 -->
             <section class="ad_wrap">
                 <!-- 1-1. 광고 개별 그룹 -->
-                <div class="swiper adSwiper">
+                <div class="swiper" id="adSwiper">
                         <div class="swiper-wrapper">
                             <!-- 슬라이드 1 -->
                             <div class="swiper-slide slide1">
                                 <div class="ad_txt">
-                                    <div class="ad_line"></div>
                                     <div class="txt_area">
                                         <h2>버터에 풍미를 더하다</h2>
                                         <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
@@ -111,7 +110,6 @@
                             <!-- 슬라이드 2 -->
                             <div class="swiper-slide slide2">
                                 <div class="ad_txt">
-                                    <div class="ad_line"></div>
                                     <div class="txt_area">
                                         <h2>버터에 풍미를 더하다</h2>
                                         <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
@@ -121,7 +119,6 @@
                             <!-- 슬라이드 3 -->
                             <div class="swiper-slide slide3">
                                 <div class="ad_txt">
-                                    <div class="ad_line"></div>
                                     <div class="txt_area">
                                         <h2>버터에 풍미를 더하다</h2>
                                         <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
@@ -129,6 +126,8 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- 글자 옆 라인 -->
+                        <div class="ad_line"></div>
                         <!-- 왼, 오 버튼 -->
                         <div class="btn_counter">
                             <a class="prev_btn"><img src="./images/prev001.png" alt=""></a>
@@ -254,7 +253,7 @@
                         <button class="sale_prev"><img src="./images/sale_prev_btn.png" alt="이전"></button>
                         <button class="sale_next"><img src="./images/sale_next_btn.png" alt="다음"></button>
                     </div>
-                    <div class="swiper saleSwiper">
+                    <div class="swiper" id="saleSwiper">
                         <ul class="swiper-wrapper">
                             <li class="swiper-slide sale_card">
                                 <a href="#">
@@ -405,7 +404,7 @@
             <section class="video_wrap">
                 <div class="tab_layout">
                     <!-- 왼쪽 -->
-                    <div class="videoLeftSwiper swiper">
+                    <div class="swiper" id="videoLeftSwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide tab_video">
                                 <video src="./video/yogurt_tab.mp4" autoplay muted loop playsinline></video>
@@ -438,7 +437,7 @@
                                 </div>
                             </div>
                             <!-- 오른쪽 콘텐츠 슬라이드 -->
-                            <div class="swiper videoSwiper">
+                            <div class="swiper" id="videoSwiper">
                                 <div class="swiper-wrapper">
                                     <!-- 요거트&토핑 -->
                                     <div class="swiper-slide tab_area">
@@ -639,7 +638,7 @@
             <!-- 9. 리뷰 -->
             <section class="review_wrap">
                 <h2>REVIEW</h2>
-                <div class="swiper reviewSwiper">
+                <div class="swiper" id="reviewSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="review_card">
