--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <meta name="keywords" content="룩트, lukt, 룩트요거트, 요거트">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>룩트 요거트</title>
+    <!-- 웹글꼴 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
     <link href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--플러그인 필수 css cdn 연결-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!--플러그인 필수 JS cdn 연결-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- 사용자파일 -->
     <link href="./styles/reset.css" rel="stylesheet">
     <link href="./styles/common.css" rel="stylesheet">
     <link href="./styles/index.css" rel="stylesheet">
+    <script src="./script/main.js" defer></script>
 </head>
 <body>
     <!-- 룩트 메인페이지 시작 영역 -->
@@ -968,7 +976,5 @@
             </div>
         </footer>
     </div>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="./script/main.js"></script>
 </body>
 </html>
