비디오섹션 수정

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                             <div class="swiper-slide slide2">
                                 <div class="ad_txt">
                                     <div class="txt_area">
-                                        <h2>버터에 풍미를 더하다</h2>
-                                        <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
+                                        <h2>그래놀라 맛집, 룩트</h2>
+                                        <p>유기농 귀리&무농약 통밀로 만들어<br>훨씬 건강하고 고소해요</p>
                                     </div>
                                 </div>
                             </div>
@@ -128,8 +128,8 @@
                             <div class="swiper-slide slide3">
                                 <div class="ad_txt">
                                     <div class="txt_area">
-                                        <h2>버터에 풍미를 더하다</h2>
-                                        <p>감칠맛 가득! 다시마 버터부터<br>고소한 시나몬피칸 버터까지</p>
+                                        <h2>피스타치오 소보로</h2>
+                                        <p>룩트 시그니처 소보로그래놀라와<br>향긋한 피스타치오의 만남!</p>
                                     </div>
                                 </div>
                             </div>
@@ -437,7 +437,7 @@
                                     <li class="tab"><button type="button">요거트&토핑</button></li>
                                     <li class="tab"><button type="button">단백질쉐이크</button></li>
                                     <li class="tab"><button type="button">버터</button></li>
-                                    <li class="tab active"><button type="button">Kids</button></li>
+                                    <li class="tab"><button type="button" class="active">Kids</button></li>
                                 </ul>
                                 <div class="tab_arrow">
                                     <button class="tab_prev"><img src="./images/video_prev_btn.png" alt="이전"></button>
