--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                             <div class="best_img_wrap">
                                 <img src="./images/best001.jpg" alt="단백질쉐이크 파우치 3개">
                                 <div class="best_icon">
-                                    <img src="./images/best_icon001.png" alt="찜하기">
-                                    <img src="./images/best_icon002.png" alt="장바구니담기"> 
+                                    <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                    <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기"> 
                                 </div>
                             </div>
                             <div class="best_txt">
@@ -184,8 +184,8 @@
                             <div class="best_img_wrap">
                                 <img src="./images/best002.jpg" alt="단백질쉐이크 파우치 3개">
                                 <div class="best_icon">
-                                    <img src="./images/best_icon001.png" alt="찜하기">
-                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                    <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                    <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                 </div>
                             </div>
                             <div class="best_txt">
@@ -202,8 +202,8 @@
                             <div class="best_img_wrap">
                                 <img src="./images/best003.jpg" alt="단백질쉐이크 파우치 3개">
                                 <div class="best_icon">
-                                    <img src="./images/best_icon001.png" alt="찜하기">
-                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                    <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                    <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                 </div>
                             </div>
                             <div class="best_txt">
@@ -220,8 +220,8 @@
                             <div class="best_img_wrap">
                                 <img src="./images/best004.jpg" alt="단백질쉐이크 파우치 3개">
                                 <div class="best_icon">
-                                    <img src="./images/best_icon001.png" alt="찜하기">
-                                    <img src="./images/best_icon002.png" alt="장바구니담기">
+                                    <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                    <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                 </div>
                             </div>
                             <div class="best_txt">
@@ -268,8 +268,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale001.jpg" alt="단백질쉐이크 파우치 3개">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -286,8 +286,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale002.jpg" alt="단백질쉐이크 볶음콩소보로 7개입">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -304,8 +304,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale003.jpg" alt="단백질쉐이크 초코헤이즐넛 7개입">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -322,8 +322,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale001.jpg" alt="단백질쉐이크 파우치 3개">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -340,8 +340,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale002.jpg" alt="단백질쉐이크 볶음콩소보로 7개입">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -358,8 +358,8 @@
                                     <div class="sale_img_wrap">
                                         <img src="./images/sale003.jpg" alt="단백질쉐이크 초코헤이즐넛 7개입">
                                         <div class="sale_icon">
-                                            <img src="./images/best_icon001.png" alt="찜하기">
-                                            <img src="./images/best_icon002.png" alt="장바구니담기">
+                                            <img src="./images/best_icon001.png" class="like_icon" alt="찜하기">
+                                            <img src="./images/best_icon002.png" class="cart_icon" alt="장바구니담기">
                                         </div>
                                     </div>
                                     <div class="sale_txt">
@@ -975,6 +975,18 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <div class="popup_bg">
+        <div class="popup">
+            <button class="close-btn" aria-label="닫기">&times;</button>
+            <div class="popup_order">
+                <div class="left_img"><img src="#" alt=""></div>
+                <div class="popup_name">
+                    <p></p>
+                    <del><strong><span></span></strong></del>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
